--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "check-format": "prettier --check .",
     "test": "cross-env BABEL_ENV=test jest",
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
-    "prepare": "husky install",
     "coverage": "cross-env BABEL_ENV=test jest --coverage"
   },
   "devDependencies": {
@@ -42,8 +41,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@tanstack/react-query": "^4.24.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "single-spa-react": "^4.3.1"
+    "react-icons": "^4.10.1",
+    "single-spa-react": "^4.3.1",
+    "styled-components": "^6.0.7"
   }
 }
