--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@tanstack/react-query": "^4.24.9",
+    "i18next": "^23.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^13.2.0",
     "react-icons": "^4.10.1",
     "single-spa-react": "^4.3.1",
     "styled-components": "^6.0.7"
